fixing spacing

--- a/src/App.css
+++ b/src/App.css
@@ -134,6 +134,8 @@
 
 /*YOUTUBE*/
 .youtubePlayer {
+  margin-bottom: -6px;
+  /*padding-top: -5px;*/
     /*position: relative;*/
     /*padding-bottom: 56.23%;*/
     /* Use 75% for 4:3 videos */
@@ -153,7 +155,7 @@
     /*height: 100%;*/
     width: 500px;
     height: 375px;
-    z-index: 2;
+    z-index: 1;
     background: transparent;
     
 
@@ -175,7 +177,6 @@
     top: 0;
     border: none;
     height: auto;*/
-  
     cursor: pointer;
     -webkit-transition: .4s all;
     -moz-transition: .4s all;
@@ -189,16 +190,25 @@
 .youtubePlayer .play {
    /* height: 72px;
     width: 72px;
-    left: 50%;
-    top: 50%;
-    margin-left: 0px;
-    margin-top: 50px;
+    /*left: 214px;*/
+    /*left: calc(250px - 36px);*/
+    /*top: 50%;*/
+
+    /*margin-left: 0px;
+    margin-top: 165px;
+    padding-top: 0px;
+    margin-bottom: -230px;
+    z-index: 2;
     position: relative;
     background: url("//i.imgur.com/TxzC70f.png") no-repeat;
     cursor: pointer;*/
 }
 
-@media screen and (max-width: 670px): {
+.youtubePlayer .play:hover {
+    -webkit-filter: brightness(75%);
+}
+
+/*@media screen and (max-width: 670px): {
   .youtubePlayer iframe {
               width: 90%;
               height: auto;
@@ -207,8 +217,12 @@
               width: 90%;
               height: auto;
                         }
+  .youtubePlayer .play {
+              left: 90%;
+              height: auto;
+                        }
 
-  }
+  }*/
 
 @media screen and (max-width: 670px) {
 
@@ -222,6 +236,21 @@
     .youtubePlayer img {
               width: 90%;
               height: auto;
+                        }
+    .youtubePlayer .play {
+              /*height: 72px;
+              width: 72px;
+              left: calc(46% - 36px);
+              /*top: 50%;*/
+
+              /*margin-left: 0px;
+              margin-top: 25%;
+              padding-top: 0px;
+              margin-bottom: -45%;
+              z-index: 2;
+              position: relative;
+              background: url("//i.imgur.com/TxzC70f.png") no-repeat;
+              cursor: pointer;*/
                         }
 }
 
